# MouseFixProgram

./: .gitignore  CMakeLists.txt  README.md  custommessagebox.cpp  custommessagebox.h  custommessagebox.ui  main.cpp  resource.qrc  widget.cpp  widget.h  widget.ui
src/code/: MouseTweaks.cpp  MouseTweaks.h  RegistryManager.cpp  RegistryManager.h  markC.cpp  markC.h
src/stylesheet/: styleSheet.qss
